tests/samples/invalid/unicode_escape_in_char.pn
fn foo()
{
	var x = '\u{1c}';
}
